--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-css": "npx tailwindcss -i ./src/assets/tailwind.input.css -o ./src/assets/tailwind.output.css --watch"
+    "watch-css": "tailwindcss -w -i ./src/assets/tailwind.input.css -o ./src/assets/tailwind.output.css"
   },
   "keywords": [],
   "author": "",
