--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-css": "tailwindcss -w -i ./src/assets/tailwind.input.css -o ./src/assets/tailwind.output.css"
+    "watch-css": "tailwindcss -w -i ./src/assets/tailwind.input.css -o ./src/assets/tailwind.output.css",
+    "lint": "npx prettier --check .",
+    "lint:fix": "npx prettier --write ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8"
   }
 }
